# medintel

./: .dockerfile  .env  .env.example  .gitignore  .hardhat.config.js  BOUNDARY.md  README.md  SECRETS_ISOLATION.md  SECURITY_SCAN.md  SYSTEM_OVERVIEW.md  VERIFICATION_CHECK.md  agent.js  bandit.yaml  compliance.md  eslint.config.js  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
AI/: MODEL_UNCERTAINTY_COMMUNICATION_STANDARD.md
api/: API_READ_SURFACE_SPECIFICATION.md  index.js  openapi.yaml
compliance/: REGULATORY_REVIEW_SIMULATIONS.md
config/: app.js
contracts/: MedToken.sol
demo/: run_medintel_demo.py
docs/: ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  COMMUNITY_AUTHENTICITY_AND_TRANSPARENCY_PROTOCOLS.md  COMMUNITY_CONTRIBUTION_FACTORS_AND_SUSTAINABILITY.md  COMMUNITY_CONTRIBUTION_REGULATIONS_AND_POLICIES.md  COMMUNITY_ISSUE_TEMPLATES.md  COVERAGE_REPORT.md  DATA_HANDLING_AND_PRIVACY.md  DATA_MODEL.md  DEMO_VALIDATION_EXECUTION_LOG.md  DETERMINISTIC_INFERENCE.md  DOCS_INDEX.md  ETHICS_AND_SAFETY_CONSTRAINTS.md  INTEGRATION_GUIDE.md  JUDGE_ADDENDUM.md  MEDICAL_SCOPE_BOUNDARIES.md  MEDINTEL_SCOPE.md  MODEL_ABSTRACTION_LAYER.md  OPEN_SOURCE_SIGNAL.md  ORCHESTRATION_ENGINE.md  PIPELINE_EXECUTION_FLOW.md  PIPELINE_FLOW.md  PIPELINE_VALIDATION_REPORT.md  SECURITY_MODEL.md  TELEMETRY_SCHEMA.md  TELEMETRY_SPEC.md  api.md
evidence/screenshots/logs/: DEMO_SUMMARY.md
frontend/: index.html
governance/: AI_TRANSPARENCY_PROTOCOL.md  DATA_ROBUSTNESS_MATRIX.md  MODEL_PRIMARY_PERFORMANCE_METRIC.md
integration/: ai.py  p2p.js  zkp.js
interfaces/: MEDINTEL_INTERFACE_PREPARATION.md
models/: MedicalData.js  rpm_assessor.py
registry/: CROSS-LINK_REGISTRY.md  ON-CHAIN_REGISTRY.md
rpm/: RPM_INCIDENT_RESPONSE_AND_RECOVERY_PROTOCOL.md  RPM_POST_MARKET_SURVEILLANCE_PLAN.md
scripts/: deploy.js
security/: BOUNDARY.md  INTEGRATION_BOUNDARIES.md  SECRETS_ISOLATION.md  SECURITY_DEPENDENCIES.md  audit.py  bandit_config.yaml  data_handler.py
test/: TEST_STRATEGY.md
