[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurogrid-medintel"
version = "0.1.0"
description = "MedIntel clinical AI and RPM intelligence layer for NeuroGrid"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]
severity = "MEDIUM"
confidence = "MEDIUM"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=medintel --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
